<resources>
    <string name="app_name">Teacher Tracker</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- SETTINGS -->
    <string name="action_settings">Configuración</string>
    <string name="action_settings_app">Configuración app</string>
    <string name="action_settings_personal">Configuración personal</string>

    <!-- DESCRIPTION TEXTS -->
    <string name="textDays">Dias de la semana a repetir</string>
    <string name="textClassroom">Aula en la que se imparte</string>
    <string name="textCourse">Curso de la asignatura</string>
    <string name="textDescription">Descripcion de la asignatura</string>
    <string name="textSubject">Nombre de la asignatura</string>
    <string name="textHoraInicio">Hora de inicio</string>
    <string name="textSchedule">Horario</string>
    <string name="textNameTask">Nombre de la tarea</string>
    <string name="textSubjectTask">Asignatura</string>
    <string name="textType">Tipo de la evaluación</string>
    <string name="textNameReview">Nombre de la evaluacion</string>
    <string name="textNameSubject">Nombre de la asignatura</string>
    <string name="textSubjectName">Nombre de la asignatura</string>
    <string name="textSubjectDescription">Descripcion de la asignatura</string>
    <string name="textSubjectCourse">Curso de la asignatura</string>

    <!-- TITLE FRAGMENTS -->
    <string name="scoreTitle">Calificaciones</string>
    <string name="subjectUpdateTitle">Modificar asignatura</string>
    <string name="subjectTitle">Asignaturas</string>
    <string name="studentUpdateTitle">Modificar estudiante</string>
    <string name="studentTitle">Estudiantes</string>
    <string name="reviewUpdateTitle">Modificar evaluación</string>
    <string name="reviewTitle">Evaluaciones</string>
    <string name="titleSubject">Asignatura</string>

    <!-- SUBJECT FRAGMENT -->
    <string name="subjectName">Nombre de la asignatura</string>
    <string name="subjectDescription">Descripción de la asignatura</string>
    <string name="subjectCurse">Curso de la asignatura</string>
    <string name="subjectAula">Aula de la asignatura</string>
    <string name="submit">Confirmar</string>

    <!-- ACTIVITY MAIN DRAWER -->
    <string name="app_description">La comodidad en tus manos</string>

    <string name="subject_section">Asignaturas</string>
    <string name="task_section">Tareas</string>
    <string name="score_section">Calificaciones</string>
    <string name="students_title">Alumnos</string>
    <string name="export_students">Exportar</string>
    <string name="manage_students">Gestionar</string>

    <!-- EDIT SUBJECT FRAGMENT -->
    <string name="subjects_editSubject">Asignaturas</string>

    <!-- UPDATE FRAGMENTS -->
    <string name="button_submit">Guardar</string>
    <string name="button_delete">Borrar</string>

    <!-- DATE FIELDS -->
    <string name="hourField">Hora</string>
    <string name="dateField">Fecha</string>

    <!-- SUBMIT SCORE FRAGMENT -->
    <string name="examName">Nombre exámen</string>
    <string name="examDate">Fecha exámen</string>
    <string name="examNameSubject">Nombre asignatura</string>
    <string name="add_button">Confirmar</string>

    <!-- STUDENTS FRAGMENT -->
    <string name="title_activity_new_students">Alumnos</string>
    <string name="student_name_label">Nombre</string>
    <string name="student_surname_label">Apellidos</string>

    <!-- TASK FRAGMENT -->
    <string name="title_activity_task">Crear tarea</string>
    <string name="taskDescription">Nombre tarea..</string>
    <string name="taskRoom">Aula tarea..</string>
    <string name="taskSubject">Asignatura..</string>
    <string name="button_add_task">CONFIRMAR</string>

    <!-- CSV header labels -->
    <string name="csv_name">Nombre</string>
    <string name="csv_surname">Apellidos</string>

    <!-- REVIEW UPDATE FRAGMENT -->
    <string name="reviewName">Nombre del examen o práctica</string>
    <string name="review_type_exam">Examen</string>
    <string name="review_type_project">Práctica</string>

    <!-- STUDENTS UPDATE -->
    <string name="image_intent_title">Selecciona una foto</string>
    <string name="taskDate">Fecha</string>

    <string name="button_newSchedule">Nuevo horario</string>

    <!-- SCORES UPDATE -->
    <string name="student_spinner">&lt; Apellidos, Nombre &gt;</string>
    <string name="score_picker_title">La nota es…</string>
    <string name="score_picker_ok">OK</string>
    <string name="score_picker_cancel">No Presentado</string>
    <string name="score_comment_toast">Debes introducir una calificación primero.</string>

    <string name="taskHour">Hora</string>
    <string name="idDefValue">0</string>
    <string name="subject">Asignatura</string>
    <string name="schedule">Horario</string>

    <string name="imageDescription">Imagen del alumno</string>
    <string name="noteImageDescription">Imagen para crear una nueva nota</string>

    <!-- Dias de la semana -->
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>
    <string name="lunesAbrv">L</string>
    <string name="martesAbrv">M</string>
    <string name="miercolesAbrv">X</string>
    <string name="juevesAbrv">J</string>
    <string name="viernesAbrv">V</string>
    <string name="sabadoAbrv">S</string>
    <string name="domingoAbrv">D</string>

    <string name="title_activity_help">HelpActivity</string>
    
    <!-- Text de la ayuda -->
    <string name="helpIndex1">¡Bienvenido a TeacherTracker!</string>
    <string name="helpIndex2">En el menú de la izquierda tendrás las diferentes funciones</string>
    <string name="helpIndex3">En el menú de la derecha tendrás las opciones de configuración</string>
    <string name="helpIndex4">¿Por qué no lo pruebas?</string>

    <string name="helpTask1">En esta pantalla podrás crear/editar tareas</string>
    <string name="helpTask2">Pulse el botón rosa para añadir tareas</string>
    <string name="helpTask3">Pulse sobre una tarea para modificarla</string>

    <string name="helpSubject1">En esta pantalla podrás crear/editar asignaturas</string>
    <string name="helpSubject2">Pulse el botón rosa para añadir asignaturas</string>
    <string name="helpSubject3">Pulse sobre una asignatura para modificarla</string>

    <string name="helpReview1">En esta pantalla podrás crear/editar exámenes o prácticas</string>
    <string name="helpReview2">Pulse el botón rosa para añadir un exámen o  práctica</string>
    <string name="helpReview3">Pulse sobre una evaluación y a continuación podrás calificar a los alumnos</string>
    <string name="subjectCreateTitle">Nueva asignatura</string>
    <string name="taskCreateTitle">Nueva tarea</string>
    <string name="taskUpdateTitle">Modificar tarea</string>
    <string name="reviewCreateTitle">Nueva evaluacion</string>
    <string name="studentCreateTitle">Nuevo estudiante</string>
    <string name="noteExampleNote">Esto es una nota...</string>
    <string name="onBackSettingsText">Los cambios se realizarán al reiniciar la aplicación</string>

</resources>
