<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Asignaturas" />
        <item
            android:id="@+id/nav_score"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="Calificaciones" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_today"
            android:title="Tareas" />
    </group>

    <item android:title="@string/students_title">
        <menu>
            <item android:id="@+id/nav_export_students" android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/export_students" />
            <item android:id="@+id/nav_manage_students" android:icon="@android:drawable/ic_menu_view"
                android:title="@string/manage_students" />
        </menu>
    </item>

</menu>